# modular-reports

./: .gitignore  Pipfile  README.md  app.py  basic.html  example.py  manage.py  pyproject.toml  requirements.txt  template.txt
example/: template  template.txt
example/weekday/: components.json  template.txt
examples/03-custom_component/: app.py
examples/03-custom_component/hello_world/: hello_world.loco  hello_world.txt
examples/04-email/: app.py  template.html  template.txt
examples/05-mjml/: app.py
examples/basic/: template.txt
examples/custom_component/: template.txt
examples/custom_component/hello_world/: __init__.py
examples/custom_provider/: app.py  weather.loco
examples/mjml/: template.mjml
modular_reports/: __init__.py  base_component.py  constants.py  providers.py  report.py  service.py  utils.py
modular_reports/components/: quote.py  weather.py
modular_reports/components/quote/: __init__.py  template.mjml
modular_reports/components/weather/: __init__.py  template.mjml
modular_reports/templates/quote/: template.txt
modular_reports/templates/weather/: template.txt
modular_reports/utils/: file.py
src/: __init__.py  base_module.py  report.py  service.py
src/default_modules/: __init__.py  title.py
templates/weekday/: template.mjml
