[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "modular_reports"
authors = [
    {name = "corgi_in_tights"}
]
description = "Creates reports using configurable components"
version = "0.0.1"
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "requests > 2.26.0",
    "jinja2"
]